css color and box aanpassing + html links

--- a/index.html
+++ b/index.html
@@ -7,16 +7,26 @@
         <link rel="stylesheet" href="style.css"> 
     </head>
     <body>
-        <header>
-            <div class="header.menu.balk"/>
-            <nav> <img src="docs/assets/logo_spatwater.png" alt="logo_img"></nav>
-            <div class=""/>
+        <header class="header-main">
+            <div class="header-main-logo">
+                <img src="docs/assets/logo_spatwater.png" alt="logo_spatwater">
+                <nav class="header-main-nav">
+                    <ul>
+                        <li><a href="index.html">HOME</a></li>
+                        <li><a href="index.html">GALLERY</a></li>
+                        <li><a href="index.html">ABOUT US</a></li>
+                        <li><a href="index.html">CONTACT</a></li>
+
+                    </ul>
+                </nav>
+            </div>
+            <div class="header-main-SignUp"></div>
         </header>
         <main>
-            <p>Custom Properties</p>
-            <hr>
+            <h1>Custom Properties</h1>
+            
         </main>
 
  </body>
 
-</html>
+</html> 
